fix: 移除缓存文件和嵌入仓库，强化gitignore和cfignore配置

--- a/.cfignore
+++ b/.cfignore
@@ -4,6 +4,12 @@
 # Next.js 缓存
 cache/
 .next/cache/
+.cache/
+*.cache
+webpack-cache/
+**/cache/**
+**/webpack/**
+**/*.pack
 
 # Node modules
 node_modules/
