--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:3001": "next dev -p 3001",
     "build": "next build",
+    "build:cloudflare": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "test:mail": "node scripts/test-mail-performance.js",
@@ -35,6 +36,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
